Fix Overflow on card

--- a/app/assets/stylesheets/pages/projet/_projet.scss
+++ b/app/assets/stylesheets/pages/projet/_projet.scss
@@ -35,6 +35,7 @@
   width: 300px;
   min-height: 450px;
   background: none;
+  overflow: hidden;
   .card-img {
     width: 100%;
     height: 222px;
